# melee

./: .gitignore  CMakeLists.txt  build.sh  run.sh
data/: README.md  download.sh
hpc/: dist_bench.sh  hnsw_bench.sh  hnsw_bench_hpc.sh  hnsw_bench_runner.sh  hnsw_build.sh  hnsw_build_hpc.sh  hnsw_build_runner.sh  hpc_bench.sh  hpc_bench_runner.sh  hpc_build.sh  hpc_build_runner.sh  hpc_runner.sh  mem_bench.sh  nnd_bench.sh  nnd_bench_runner.sh  nnd_build.sh  nnd_build_runner.sh  nohup.out
include/: argparse.hpp  cmdline.hpp  dataloader.hpp  distance.hpp  span.hpp  timer.hpp
include/distance/: ip.hpp  l1.hpp  l2.hpp  util.hpp
python/: .gitignore  bench.py  dataloader.ipynb  foo.py  hnsw.ipynb  hnsw_build.py  nnd.ipynb  nnd_bench.py  nnd_build.py  util.py
src/: dist_bench.cpp  hnsw_bench.cpp  hnsw_build.cpp  hnsw_main.cc  mem_bench.cpp  nnd_build.cpp
